<resources>
    <!--TODO: Later apply android resource naming convention to all resources-->
    <string name="app_name">Green garden</string>
    <string name="plant_photo_description">Picture of plant</string>
    <string name="last_watered_label">Last Watered</string>
    <string name="planted_label">Planted</string>
    <string name="your_garden_is_empty">Your garden is empty</string>
    <string name="add_plant">Add plant</string>
    <string name="garden_tab_title">My garden</string>
    <string name="plants_tab_title">Plants</string>
    <string name="navigate_to_gallery">Navigate to gallery</string>
    <string name="remove_add_to_garden">Remove plant from or add to garden</string>
    <string name="added_plant_to_garden">Added plant to garden</string>
    <string name="watering_text_format">every %d days</string>
    <string name="watering_text_garden_format">water in %d days</string>
    <string name="watering_needs">Watering needs</string>
    <string name="message_no_internet">No internet connection</string>
    <string name="detail_no_internet">Check your WiFi or Mobile data and retry</string>
    <string name="message_401">Unauthenticated</string>
    <string name="detail_401">Http status code: 401</string>
    <string name="message_400_500">Client error</string>
    <string name="detail_400_500">Http status code: %1$d. %2$s</string>
    <string name="message_500_600">Server error</string>
    <string name="detail_500_600">Http status code: %1$d. %2$s.\nTry again later</string>
    <string name="message_unexpected">Unexpected response</string>
    <string name="message_unknown">Unknown error</string>
    <string name="detail_unknown">An unknown error occurred while loading data</string>
    <string name="button_retry">Retry</string>
    <string name="retry_button_description">Retry button</string>
    <string name="removed_plant_from_garden">Removed plant from garden</string>
    <string name="water_plant">Water plant</string>
    <string name="delete_plant_dialog_message">Do you want to remove this plant from your garden?</string>
    <string name="delete_plant_dialog_pos_action">Remove</string>
    <string name="delete_plant_dialog_title">Remove plant</string>
</resources>