<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="org.android.learning.sunflower.data.Plant" />
        <variable
            name="viewModel"
            type="org.android.learning.sunflower.viewmodels.PlantDetailViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorSurface"
        tools:context=".GardenActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorSurface"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/toolbar_detail_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                app:collapsedTitleGravity="start|center_vertical"
                app:collapsedTitleTextAppearance="@style/TextAppearance.SunflowerClone.Toolbar.Text"
                app:contentScrim="?attr/colorSurface"
                app:expandedTitleMarginBottom="20dp"
                app:expandedTitleMarginStart="12dp"
                app:expandedTitleTextAppearance="@style/TextAppearance.SunflowerClone.Toolbar.ExpandedText"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
                app:maxLines="2"
                app:title="@{viewModel.plant.name}"
                app:toolbarId="@id/toolbar_detail">

                <ImageView
                    android:id="@+id/image_view_detail_photo"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/detaial_toolbar_height"
                    android:contentDescription="@string/plant_photo_description"
                    android:scaleType="centerCrop"
                    app:imageFromAsset="@{viewModel.plant.imageAsset}"
                    app:layout_collapseMode="parallax"
                    tools:background="@tools:sample/backgrounds/scenic" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_gravity="bottom"
                    android:background="@drawable/bg_gradient" />

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar_detail"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@android:color/transparent"
                    android:theme="@style/Theme.SunflowerClone.ToolbarOverlay"
                    app:contentInsetStartWithNavigation="@dimen/toolbar_inset_with_navigation"
                    app:layout_collapseMode="pin"
                    app:navigationIcon="@drawable/ic_detail_back"
                    app:titleTextColor="?attr/colorOnSurface"
                    tools:title="Hello Mike" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_view_plant_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="12dp"
                android:paddingTop="28dp"
                android:paddingEnd="12dp"
                android:paddingBottom="12dp">

                <ImageButton
                    android:id="@+id/image_view_gallery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/navigate_to_gallery"
                    android:src="@drawable/ic_photo_library"
                    app:isGone="@{!viewModel.hasValidUnsplashKey()}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/image_view_water"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/water_plant"
                    android:padding="2dp"
                    android:src="@drawable/ic_watering"
                    app:isGone="@{!viewModel.isPlanted()}"
                    app:layout_constraintBottom_toBottomOf="@id/text_view_watering_label"
                    app:layout_constraintEnd_toEndOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/planted_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    app:isPlantLayoutGone="@{!viewModel.isPlanted}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/label_planted"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/planted_label"
                        android:textAppearance="?attr/textAppearanceSubtitle2"
                        android:textColor="?attr/colorAccent"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/label_last_watered"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/last_watered_label"
                        android:textAppearance="?attr/textAppearanceSubtitle2"
                        android:textColor="?attr/colorAccent"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/label_planted" />

                    <TextView
                        android:id="@+id/label_plant_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:textAppearance="?attr/textAppearanceSubtitle2"
                        app:layout_constraintStart_toEndOf="@id/labels_barrier"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="@sample/plant_dates" />

                    <TextView
                        android:id="@+id/label_last_water_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:textAppearance="?attr/textAppearanceSubtitle2"
                        app:layout_constraintStart_toEndOf="@id/label_last_watered"
                        app:layout_constraintTop_toBottomOf="@id/label_planted"
                        tools:text="@sample/plant_dates" />

                    <androidx.constraintlayout.widget.Barrier
                        android:id="@+id/labels_barrier"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        app:barrierDirection="end"
                        app:constraint_referenced_ids="label_planted, label_last_watered" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/text_view_watering_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/watering_needs"
                    android:textAppearance="?attr/textAppearanceSubtitle2"
                    android:textColor="?attr/colorAccent"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/planted_layout"
                    tools:text="Watering needs" />

                <TextView
                    android:id="@+id/text_view_detail_water_interval"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textAppearance="?attr/textAppearanceSubtitle2"
                    android:textColor="?attr/colorOnSurface"
                    app:layout_constraintStart_toEndOf="@id/text_view_watering_label"
                    app:layout_constraintTop_toTopOf="@id/text_view_watering_label"
                    app:wateringText="@{viewModel.plant.wateringInterval}"
                    tools:text="every 4 days" />

                <TextView
                    android:id="@+id/text_view_plant_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_view_detail_water_interval"
                    app:renderHtml="@{viewModel.plant.description}"
                    tools:text="Details about the plant" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_plant_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:contentDescription="@string/remove_add_to_garden"
            app:layout_anchor="@id/appbar_detail"
            app:layout_anchorGravity="bottom|end"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.SunflowerClone.FAB"
            tools:srcCompat="@drawable/ic_plus" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>