<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/fragment_garden">

    <data>
        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />
        <variable
            name="viewModel"
            type="org.android.learning.sunflower.viewmodels.PlantAndGardenPlantViewModel" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:onClick="@{clickListener}"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="@dimen/card_elevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_view_garden_plant_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/plant_photo_description"
                android:scaleType="fitCenter"
                app:imageFromUrl="@{viewModel.imageUrl}"
                tools:src="@tools:sample/backgrounds/scenic" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/card_padding">

                <TextView
                    android:id="@+id/text_view_plant_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@{viewModel.plantName}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@sample/garden_plant_names" />

                <TextView
                    android:id="@+id/text_view_plant_date_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/planted_label"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                    android:textColor="?attr/colorAccent"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_view_plant_name" />

                <TextView
                    android:id="@+id/text_view_plant_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.plantDateString}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                    app:layout_constraintBaseline_toBaselineOf="@id/text_view_plant_date_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="@sample/plant_dates" />

                <TextView
                    android:id="@+id/text_view_last_watered_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_watered_label"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                    android:textColor="?attr/colorAccent"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_view_plant_date_label" />

                <TextView
                    android:id="@+id/text_view_last_watered"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.waterDateString}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                    app:layout_constraintBaseline_toBaselineOf="@id/text_view_last_watered_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="@sample/plant_dates" />

                <TextView
                    android:id="@+id/text_view_water_interval"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:gravity="center_horizontal"
                    android:text="@{viewModel.waterInterval}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_view_last_watered_label"
                    tools:text="@sample/water_intervals" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</layout>